task_2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-test
  labels:
    name: mesh-test
