task_2/hello-svc-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-svc-1
  namespace: mesh-test
  labels:
    name: hello-svc-1
    app: demo-istio
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: index-web-pod-1
      app: demo-istio
      version: v1
  template:
    metadata:
      name: index-web-pod-1
      labels:
        name: index-web-pod-1
        app: demo-istio
        version: v1
    spec:
      containers:
      - name: index-web-container01
        image: sumuduliyan/service-1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
