task_2/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-istio
  namespace: mesh-test
  labels:
    name: demo-istio
    app: demo-istio
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: demo-istio
