task_2/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo-istio
  namespace: mesh-test
spec:
  host: demo-istio
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
