task_2/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-istio
  namespace: mesh-test
spec:
  hosts:
  - 35.188.187.188.nip.io
  gateways:
  - myservice-gateway
  http:
  - match:
    - headers: 
        x-svc-version:
          exact: v1
    route:
    - destination:
        host: demo-istio
        subset: v1
  - route:
    - destination:
        host: demo-istio
        subset: v2
